--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.507.0",
-    "next": "15.3.1",
+    "next": "^15.5.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
